src/css/footer.scss
.footer__bottom {
  a {
    color: #5396d1;
    text-decoration: none;
  }
  a:hover {
    color: var(--ifm-color-primary-darkest)

  }
}

.theme-doc-footer {
    border-top: 2px solid var(--ifm-table-border-color);
}

.footer--dark {
   --ifm-footer-background-color: black;
}

.footer__links {
  a:hover {
    color: $magenta;
    text-decoration: none;
  }
}

.footer__title  {
  margin-bottom: .5rem;
}

.footer__copyright {
  a:hover {
    color: $magenta;
    text-decoration: none;
  }
}

